--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/myboard?allowPublicKeyRetrie
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+hibernate:
+    ddl-auto: create
+
